# ML_Algo_CPP

./: .gitignore  CMakeLists.txt  README.md
_inc/Math/: Math.h  a.out
_inc/project/: Math.h  Naive_bayes.h  iris.h  preprocessing.h
_src/: CMakeLists.txt  Math.cpp  Naive_Bayes.cpp  preprocessing.cpp
_src/Math/: Math.cpp
docs/: development.md
test/: CMakeLists.txt  Naive_Bayes_test.cpp  build.sh  gaussian_test.cpp  preprocessing_test.cpp
test/Math/: CMakeLists.txt  Math_test.cpp
test/Naive_Bayes/: CMakeLists.txt  Naive_Bayes_test.cpp
test/_inc/: test_gaussian.h
